# gosti-client-tauri

./: package.json
resources/: gosti-config.json  nostr-keys.json
resources/apps/: .gitignore
resources/apps/about/: index.html
src/: App.css  App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chia_rpc.rs  commands.rs  libtorrent.rs  lt.cc  lt.h  main.rs  rqbit_config.rs
src-tauri/src/chia_rpc/: chia_rpc_types.rs
