[package]
name = "gosticlient"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
cxx-build = "1.0.0"

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.35.1"
anyhow = "1.0.78"
base64 = "0.21.5"
http = "1.0.0"
directories = "5.0.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
parking_lot = "0.12.1"
serde_with = "3.4.0"
reqwest = { version = "0.11.23", features = ["json", "native-tls"], default-features = false }
phf = "0.11.2"
rustls = "0.22.1"
dirs = "5.0.1"
hex = "0.4.3"
crypto-hash = "0.3.4"
sha2 = "0.10.8"
bencode = "0.1.16"
secp256k1 = { version="0.28.2", features= ["hashes"] }
zip = "0.6.6"
cxx = "1.0.119"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
